# Rengine

./: .gitignore  CMakeLists.txt  CmakePresets.json  Model.h  README.md  RenderBuffer.cpp  RenderBuffer.h  Rengine.cpp  Rengine.vcxproj  Rengine.vcxproj.filters  camera.hpp  cube.cpp  cube.hpp  debugDepthMap.h  engine.cpp  engine.h  material.fs  material.vs  mesh.h  meshBase.cpp  meshBase.h  meshBase.idl  meshBase.xaml  meshy.h  param.hpp  plane.fs  plane.hpp  plane.vs  ray.h  scene.fs  scene.vs  shader.cpp  shader.hpp  shadowCube.h  sky.hpp  texture.h
Engine/: CMakeLists.txt
Engine/Application/: application.cpp  application.h
Engine/Core/: entryPoint.h
Engine/Core/Event/: eventDispacther.h
Engine/Core/Logger/: ILoggerSink.h  consoleSink.h  logMessage.h  logger.h
Engine/Core/Window/: windowManager.h
Engine/Platform/Windows/: windowsWindow.cpp  windowsWindow.h
Engine/includes/: engine.h
Engine/src/: engine.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp
